# HLauncher

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_mac.sh  build_macos.sh  build_windows.bat
cmake/: Info.plist.in
src/: main.cpp
src/app/: account_store.cpp  account_store.hpp  downloader.cpp  downloader.hpp  instance_manager.cpp  instance_manager.hpp  launcher.cpp  launcher.hpp  modrinth.cpp  modrinth.hpp  version_catalog.cpp  version_catalog.hpp
src/auth/: oauth.cpp  oauth.hpp  pkce.cpp  pkce.hpp  redirect.cpp  redirect.hpp
src/ipc/: single_instance.cpp  single_instance.hpp
src/platform/: macos_url.hpp  macos_url.mm  open_url.cpp  open_url.hpp
src/ui/: launcher_window.cpp  launcher_window.hpp
